src/ui/snapshots/vauchi_tui__ui__widget_snapshots__card_preview_no_fields.snap
---
source: src/ui/widget_snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Card Preview ──────────────────────────────────┐
│                                                │
│  Empty User                                    │
│                                                │
│  No visible fields                             │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
