src/ui/snapshots/vauchi_tui__ui__widget_snapshots__card_preview_no_groups.snap
---
source: src/ui/widget_snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Card Preview ──────────────────────────────────┐
│                                                │
│  Alice                                         │
│                                                │
│  [E] Personal (Email): alice@example.com       │
│  [P] Mobile (Phone): +41 79 123 45 67          │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
