src/ui/snapshots/vauchi_tui__ui__widget_snapshots__card_preview_with_groups.snap
---
source: src/ui/widget_snapshots.rs
expression: buffer_to_string(&buf)
---
 Family | Coworkers                               
                                                  
┌ Card Preview ──────────────────────────────────┐
│                                                │
│  A. Smith                                      │
│                                                │
│  [E] Work (Email): asmith@corp.com             │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
