src/ui/snapshots/vauchi_tui__ui__widget_snapshots__field_list_empty.snap
---
source: src/ui/widget_snapshots.rs
expression: buffer_to_string(&buf)
---
┌ No fields shared ──────────────────────────────────────────────────┐
│  No fields added yet.                                              │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
