src/ui/snapshots/vauchi_tui__ui__widget_snapshots__field_list_per_group_mode.snap
---
source: src/ui/widget_snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Fields (Coworkers, Family) ────────────────────────────────────────┐
│Type       Label           Value                  Visibility        │
│                                                                    │
│Email      Work            alice@corp.com         Coworkers         │
│Phone      Home            +41 79 000 00 00       No groups         │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
