src/ui/snapshots/vauchi_tui__ui__widget_snapshots__field_list_show_hide_mode.snap
---
source: src/ui/widget_snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Fields (Show/Hide) ────────────────────────────────────────────────┐
│Type       Label           Value                  Visibility        │
│                                                                    │
│Email      Personal        alice@example.com      Shown             │
│Phone      Mobile          +41 79 123 45 67       Hidden            │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
