src/ui/snapshots/vauchi_tui__ui__widget_snapshots__info_panel_no_icon.snap
---
source: src/ui/widget_snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Getting Started ───────────────────────────────┐
│                                                │
│  Welcome                                       │
│  Get started with Vauchi.                      │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
