src/ui/snapshots/vauchi_tui__ui__widget_snapshots__info_panel_with_icons.snap
---
source: src/ui/widget_snapshots.rs
expression: buffer_to_string(&buf)
---
┌ [S] Security ──────────────────────────────────┐
│                                                │
│  [*] End-to-end encrypted                      │
│      Your data is always encrypted.            │
│                                                │
│  [S] No tracking                               │
│      We never track your usage.                │
│                                                │
│  Open source                                   │
│  Fully auditable code.                         │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
