src/ui/snapshots/vauchi_tui__ui__widget_snapshots__text_input_with_error.snap
---
source: src/ui/widget_snapshots.rs
expression: buffer_to_string(&buf)
---
Display Name                            
┌──────────────────────────────────────┐
│|                                     │
└──────────────────────────────────────┘
Name is required
