src/ui/snapshots/vauchi_tui__ui__widget_snapshots__toggle_list_mixed_selection.snap
---
source: src/ui/widget_snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Groups ──────────────────────────────┐
│ [x] Family                           │
│     Close relatives                  │
│ [ ] Friends                          │
│ [x] Coworkers                        │
│     Professional contacts            │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
